--- a/css/game.css
+++ b/css/game.css
@@ -4,11 +4,13 @@
 .background td { padding: 0;          }
 .lava          { background: rgb(255, 100, 100); }
 .wall          { background: white;   }
-.floater       { background: rgb(200,230,255);   }
 
 .actor  { position: absolute;  }
 .player { background: rgb(64, 64, 64); }
 
 .game {
+  overflow: hidden;
+  max-width: 600px;
+  max-height: 450px;
   position: relative;
 }
